# tennis_preprocessing

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
data/data_pred_before/: WTA-2024-07-05.csv
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: __init__.py  config.py  preprocess_tennis.py  scrape_matchs.py  tennis_preprocessing.py  utils.py
src/tennis_preprocessing/: __init__.py  cli.py  config.py  tennis_preprocessing.py
tests/: __init__.py  test_tennis_preprocessing.py
