[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tennis_preprocessing"
version = "0.1.0"
description = "This repo contains multiple functions to preprocess tennis data from http://www.tennis-data.co.uk/"
readme = "README.rst"
authors = [
  {name = "Marc Abelé", email = "abele.marc@gmail.com"}
]
maintainers = [
  {name = "Marc Abelé", email = "abele.marc@gmail.com"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/mouarc/tennis_preprocessing/issues"
changelog = "https://github.com/mouarc/tennis_preprocessing/blob/master/changelog.md"
homepage = "https://github.com/mouarc/tennis_preprocessing"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

